--- a/src/test.css
+++ b/src/test.css
@@ -1,72 +1,323 @@
+@charset "UTF-8";
 
-div{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+
+@import url("customReset.css");
+
+
+:root {
+
+    --color_main: #53B167;
+    --color_green1: #608A69;
+    --color_gray1: #f4f4f4;
+
+    --clockTime: 10s;
+
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #242;
+    border: 2px solid var(--color_main);
+    border-radius:5px;
+}
+::-webkit-scrollbar-track {
+	background: var(--color_main); 
+}
+
+.wrap{
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* ui */
+.ui{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-bottom: 30px;
+    background-color: #fff;
+    box-shadow: 3px 0 3px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 
 
-.wrap{
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    /* background-color: #ddd; */
+.ui .header{
+    position: relative;
+}
+
+.ui .header::before{
+    position: fixed;
+    display: block;
+    content: "";
+    width: 10px;
+    height: 100vh;
+    background-color: var(--color_main);
+    top: 0;
+    right: 0;
+    z-index: 10;
+}
+
+.btn_option{
+    position: fixed;
+    top: 0;
+    right: 10px;
+    display: block;
+    width: 60px;
+    height: 60px;
+    background-color: var(--color_main);
+    border-bottom-left-radius: 35px;
+    color: #fff;
+    font-size: 30px;
+    text-align: center;
+    line-height: 50px;
+    z-index: 2;
+    
+}
+
+.optionOpen i{
+    transition: rotate 1.2s ease-in-out;
+}
+
+.optionOpen:hover i{
+    rotate: 180deg;
+}
+
+.optionModal_wrap{
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 600px;
+    height: 800px;
+    padding: 30px;
+    /* border: 3px solid var(--color_main);
+    background-color: #fff; */
     background-color: #f4f4f4;
-    /* height: 500px; */
+    border-bottom-left-radius: 10px;
+
+    box-shadow: -3px 5px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+
+    transform: translateX(100%);
+    transition: 0.3s;
+}
+
+.active .optionModal_wrap{
+    transform: translateX(0%);
+    right: 10px;
+}
+
+.optionClose{
+    display: none;
+}
+
+.active .optionClose{
+    display: block;
+}
+
+.notice_score{
+    height: 140px;
+    padding: 20px 0;
     display: flex;
-    gap: 10px;
-    width: 90%;
-    min-width: 800px;
-    flex-wrap: wrap;
-    padding: 50px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-left: 5%;
+}
+
+    /* timer */
+.timer_wrap{
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
+
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid var(--color_gray1);
+    overflow: hidden;
+
+    z-index: -1;
+
+    display: flex;
     justify-content: center;
+    align-items: center;
+
+    font-variant-numeric: tabular-nums;
+
+    color: #242;
+    font-size: 48px;
+    font-weight: 900;
+
+    /* font-family: 'Black Ops One', cursive; */
+    /* font-family: 'Inter', sans-serif; */
+    /* font-family: 'Pacifico', cursive; */
+    /* font-family: 'Croissant One', cursive; */
+    font-family: 'Fjalla One', sans-serif;
+    /* font-family: 'DM Serif Display', serif; */
+}
+
+
+.clockHands{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    left: 0;
+    background-color: #FDB6B6;
+    z-index: -1;
+    transform-origin: 100% 50%;
+}
+.clockHands.cover{
+    background-color: #fff;
+}
+
+.clockHands.half.animation{
+    animation: clock_half var(--clockTime) forwards linear;
+}
+.clockHands.full.animation{
+    animation: clock_full var(--clockTime) forwards linear;
+}
+.clockHands.cover.animation{
+    animation: clock_cover var(--clockTime) forwards linear;
+}
+
+@keyframes clock_half {
+    0%{rotate: 0deg;}
+    50%{rotate: 180deg;}
+    100%{rotate: 180deg;}
+}
+
+@keyframes clock_full {
+    0%{rotate: 0deg;}
+    50%{rotate: 180deg;}
+    100%{rotate: 360deg;}
+}
+@keyframes clock_cover {
+    0%{visibility: visible;}
+    50%{visibility: hidden;}
+    100%{visibility: hidden;}
+}
+
+
+
+
+    /* new game button */
+.group_btn{
+    overflow: hidden;
+    position: absolute;
+}
+.group_btnInner{
+    display: flex;
+    gap: 30px;
+}
+.btn_newGame{
+    padding: 10px;
+    height: 44px;
+    background-color: #fff;
+    border: 2px solid var(--color_main);
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 900;
+    color: #408E51;
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    transition: 0.3s;
+}
+.btn_newGame i{
+    font-size: 16px;
+    margin-right: 10px;
+}
+.btn_newGame span{
+    display: inline-block;
+    width: 3px;
+    height: 20px;
+    margin: 0 8px;
+    background-color: #408E51;
+    transition: 0.3s;
+}
+
+.btn_newGame:hover{
+    color: #fff;
+    background-color: var(--color_main);
+}
+.btn_newGame:hover i{
+    color: #fff;
+    rotate: 360deg;
+    transition: color 0.3s, rotate 1s 0.3s ;
+}
+.btn_newGame:hover span{
+    background-color: #fff;
+}
+
+@media (min-width: 1101px) {
+    .btn_openBtnGroup{
+        display: none;
+    }
+
+    .group_btn{
+        position: absolute;
+        right: 5%;
+        bottom: 20px;
+        padding-right: 30px;
+    }
+}
+
+    /* /new game button */
+
+
+/* gameBoard */
+.gameBoard{
+    border: 1px solid #ccc;
+    background-color: var(--color_gray1);
+    margin-top: 200px;
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 }
 
 .card_wrap{
-    /* background-color: #fee; */
     position: relative;
     width: 120px;
     height: 180px;
-
-    perspective: 500px;
-    perspective-origin: center;
-    /* transform-style: preserve-3d; */
-
     cursor: pointer;
 }
 
 
 .card{
+    position: absolute;
     width: 120px;
     height: 180px;
     border-radius: 5px;
-    border: 2px solid #608a69;
-    position: absolute;
-    
+    border: 2px solid var(--color_green1);
     transition: transform 0.5s;
     backface-visibility: hidden;
+    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 .card_front{
     transform: rotateY(180deg);
-    /* background-color: #fff; */
-    background-image: linear-gradient(to left, #fff 50%, #f4f4f4 50%);
-    font-size: 40px;
-    font-weight: bold;
-    color: #47634d;
-    /* text-align: center; */
+    background-image: linear-gradient(to left, #fff 50%, var(--color_gray1) 50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
+    font-size: 40px;
+    font-weight: bold;
+    color: #47634d;
 }
 .card_back{
-    /* background-color: #53B167; */
-    background-image: linear-gradient(to left, #fff 50%, #53B167 50%);
-    overflow: hidden;
-    /* position: relative; */
-
-    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(to left, #fff 50%, var(--color_main) 50%);
 }
 
 .deco{
@@ -74,104 +325,118 @@ div{
     border-style: solid;
     border-width: 41px 28px;
 }
-.deco.top{
-    top: 0;
-    transform: translateY(2px);
-}
-.deco.bottom{
-    bottom: 0;
-    transform: translateY(-2px);
-}
-.deco.left{
-    right: 50%;
-}
-.deco.right{
-    left: 50%;
-}
+.deco.top{top: 0; transform: translateY(2px);}
+.deco.bottom{bottom: 0; transform: translateY(-2px);}
+.deco.left{right: 50%;}
+.deco.right{left: 50%;}
+
 .card_back .deco.top.left{border-color: transparent #fff transparent transparent;}
 .card_back .deco.top.right{border-color: transparent transparent transparent #fff;}
-.card_back .deco.bottom.left{border-color: transparent #53B167 transparent transparent;}
-.card_back .deco.bottom.right{border-color: transparent transparent transparent #53B167;}
+.card_back .deco.bottom.left{border-color: transparent var(--color_main) transparent transparent;}
+.card_back .deco.bottom.right{border-color: transparent transparent transparent var(--color_main);}
 
-.deco.border{
-    border-width: 45px 30px;
-}
-.deco.border.top{
-    transform: translateY(-2px);
-}
-.deco.border.bottom{
-    transform: translateY(2px);
-}
+.deco.border{border-width: 45px 30px;}
+.deco.border.top{transform: translateY(-2px);}
+.deco.border.bottom{transform: translateY(2px);}
 
-.card_back .deco.border.top.left{border-color: transparent #53B167 transparent transparent;}
-.card_back .deco.border.top.right{border-color: transparent transparent transparent #53B167;}
+.card_back .deco.border.top.left{border-color: transparent var(--color_main) transparent transparent;}
+.card_back .deco.border.top.right{border-color: transparent transparent transparent var(--color_main);}
 .card_back .deco.border.bottom.left{border-color: transparent #fff transparent transparent;}
 .card_back .deco.border.bottom.right{border-color: transparent transparent transparent #fff;}
 
-
-
-
-.card_front .deco{
-    z-index: -1;
-}
+.card_front .deco{z-index: -1;}
 
 .card_front .deco.top.left{border-color: transparent #fff transparent transparent;}
 .card_front .deco.top.right{border-color: transparent transparent transparent #fff;}
-.card_front .deco.bottom.left{border-color: transparent #f4f4f4 transparent transparent;}
-.card_front .deco.bottom.right{border-color: transparent transparent transparent #f4f4f4;}
+.card_front .deco.bottom.left{border-color: transparent var(--color_gray1) transparent transparent;}
+.card_front .deco.bottom.right{border-color: transparent transparent transparent var(--color_gray1);}
 
-.card_front .deco.border.top.left{border-color: transparent #f4f4f4 transparent transparent;}
-.card_front .deco.border.top.right{border-color: transparent transparent transparent #f4f4f4;}
+.card_front .deco.border.top.left{border-color: transparent var(--color_gray1) transparent transparent;}
+.card_front .deco.border.top.right{border-color: transparent transparent transparent var(--color_gray1);}
 .card_front .deco.border.bottom.left{border-color: transparent #fff transparent transparent;}
 .card_front .deco.border.bottom.right{border-color: transparent transparent transparent #fff;}
 
+.card_open .card_back{transform: rotateY(180deg);}
+.card_open .card_front{transform: rotateY(360deg);}
 
+.correct .card_back{transform: rotateY(180deg);}
+.correct .card_front{transform: rotateY(360deg);}
 
-
-
-.card_open .card_back{
-    transform: rotateY(180deg);
+.card_front::after{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    z-index: 1;
+    border-style: solid;
+    border-width: 4px;
 }
-.card_open .card_front{
-    transform: rotateY(360deg);
-}
-
-.correct .card_back{
-    transform: rotateY(180deg);
-}
-.correct .card_front{
-    transform: rotateY(360deg);
-}
-
 
 .user .card_front::after{
     content: "";
-    display: block;
-    position: absolute;
-    border-radius: 5px;
-    /* left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0; */
-    width: 100%;
-    height: 100%;
-    border: 4px solid #975757;
+    border-color: #975757;
     box-shadow: inset 0 0 10px 0 #f00;
-    z-index: 1;
 }
 
 .com .card_front::after{
     content: "";
-    display: block;
-    position: absolute;
-    border-radius: 5px;
-    /* left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0; */
-    width: 100%;
-    height: 100%;
-    border: 4px solid #575797;
+    border-color: #575797;
     box-shadow: inset 0 0 10px 0 #00f;
-    z-index: 1;
+}
+
+.btn_openBtnGroup{
+    position: absolute;
+    right: 10px;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    border-top-left-radius: 20px;
+    background-color: var(--color_main);
+    
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
+}
+.btn_openBtnGroup i{
+    transition: 0.5s;
+}
+.btn_openBtnGroup.active i{
+    rotate: 180deg;
+}
+
+
+
+@media (max-width: 1100px) {
+    .group_btn{
+        background-color: var(--color_gray1);
+        justify-content: center;
+        transition: 0.5s;
+        height: 0px;
+        position: relative;
+    }
+
+    .group_btn.active{
+        height: auto;
+        padding-bottom: 60px;
+    }
+
+    .group_btnInner{
+        position: absolute;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 835px) {
+    .gameBoard{
+        padding: 50px 20px;
+    }
+    .optionModal_wrap{
+        width: 90%;
+    }
 }
