--- a/src/customReset.css
+++ b/src/customReset.css
@@ -9,8 +9,9 @@ html{box-sizing:border-box}
 
 a{
     color: inherit;
+    text-decoration: none;
 }
-button, input{
+button, input, label{
     margin: 0;
     padding: 0;
     font-size: inherit;
