--- a/src/css/customReset.css
+++ b/src/css/customReset.css
@@ -65,3 +65,79 @@ a{
 	background: var(--color_main); 
 }
 
+
+
+/*-- 카드 애니메이션 --*/
+
+.init{
+    opacity: 0;
+}
+
+.initAnimation [class*=card]{
+    animation: cardAnimation 0.3s forwards linear;
+    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.25);
+}
+.initAnimation::before{
+    position: absolute;
+    display: block;
+    content: "";
+    width: var(--cardSize_width);
+    height: var(--cardSize_height);
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.1);
+    animation: cardShadowAnimation 0.6s forwards linear;
+}
+@keyframes cardAnimation{
+    0%{transform: translateY(0px);}
+    50%{transform: translateY(-10px);}
+    100%{transform: translateY(0px);}
+}
+@keyframes cardShadowAnimation{
+    0%{
+        opacity: 0;
+        transform: scale(1);
+    }
+    50%{
+        opacity: 1;
+        transform: scale(1.02);
+    }
+    100%{
+        opacity: 0;
+        transform: scale(1);
+    }
+}
+
+.openCard [class*=back]{transform: rotateY(180deg);}
+.openCard [class*=front]{transform: rotateY(360deg);}
+
+/* 카드 정답 표시*/
+.correct [class*=back]{transform: rotateY(180deg);}
+.correct [class*=front]{transform: rotateY(360deg);}
+
+[class*=front]::after{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    z-index: 1;
+    border-style: solid;
+    border-width: 4px;
+}
+
+.single [class*=front]::after{
+    content: "";
+    border-color: #579757;
+    box-shadow: inset 0 0 10px 0 #0f0;
+}
+.user [class*=front]::after{
+    content: "";
+    border-color: #575797;
+    box-shadow: inset 0 0 10px 0 #00f;
+}
+.com [class*=front]::after{
+    content: "";
+    border-color: #975757;
+    box-shadow: inset 0 0 10px 0 #f00;
+}
