--- a/src/css/Card.module.css
+++ b/src/css/Card.module.css
@@ -94,10 +94,10 @@
     border-width: 4px;
 }
 
-.single .front::after{
+/* .single .front::after{
     content: "";
     border-color: #579757;
-    box-shadow: inset 0 0 10px 0 #0f0;
+    box-shadow: inset 0 0 10px 0 #070;
 }
 .user .front::after{
     content: "";
@@ -108,4 +108,4 @@
     content: "";
     border-color: #975757;
     box-shadow: inset 0 0 10px 0 #f00;
-}
+} */
