--- a/src/css/CompHeaderTimer.module.css
+++ b/src/css/CompHeaderTimer.module.css
@@ -3,7 +3,7 @@
 }
 
 
-.timerWrap{
+.wrap{
     margin: 0 auto;
     position: relative;
     width: 100px;
@@ -28,6 +28,31 @@
 
     font-family: 'Fjalla One', sans-serif;
 }
+.wrap::before{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: "";
+    display: block;
+    border-radius: 50%;
+    box-shadow: inset 0 0 8px 0 var(--color_gray1);
+    z-index: 1;
+}
+
+
+
+.single::before{
+    box-shadow: inset 0 0 8px 0 #070;
+}
+.user::before{
+    box-shadow: inset 0 0 8px 0 #00f;
+}
+.com::before{
+    box-shadow: inset 0 0 8px 0 #f00;
+}
+
 
 
 .clockHands{
