--- a/src/css/CompOptDifficultyDetails.module.css
+++ b/src/css/CompOptDifficultyDetails.module.css
@@ -11,7 +11,6 @@
     background-color: transparent;
     box-sizing: border-box;
     height: 10px;
-    /* background: linear-gradient(to right, var(--color_main) 50%, #fff 50%); */
     border-radius: 3px;
     box-shadow: inset 0 0 0 1px var(--color_main);
     margin: 0 1px;
@@ -36,4 +35,12 @@
     background-color: #fff;
     border: 2px solid #408E51;
     border-radius: 4px;
+}
+
+@media (max-width: 350px){
+    .rangeWrap{
+        grid-template-columns: 1fr;
+        gap: 20px;
+        margin: 20px 0;
+    }
 }
