--- a/src/css/OptionModal.module.css
+++ b/src/css/OptionModal.module.css
@@ -254,7 +254,7 @@
 @media (max-width: 459px){
     .wrap{
         width: 100%;
-        padding: 10px;
+        padding: 30px 10px 50px;
     }
 
     .mobileGridPosition{
